was.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
spec:
  replicas: 3
  selector:
    matchLabels:
      app: was
  template:
    metadata:
      labels:
        app: was
    spec:
      containers:
      - name: tomcat
        image: ariari50/was:2.3
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 50Mi
