web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: nginx
        image: ariari50/web:3.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 50Mi
