was-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: was-svc
spec:
  type: ClusterIP
  clusterIP: 10.100.100.10
  selector:
    app: was
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
