web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
spec:
  type: NodePort
  clusterIP: 10.100.100.200
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
  selector:
    app: web
