ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 2commerce.com
    http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
      - path: /was
        pathType: Prefix
        backend:
          service:
            name: was-svc2
            port:
              number: 8080
